detail.css
body {
  --text-color: black;
  --elements-color: white;
  --shadowColor: #dfdede;
  --bgColor: white;
  --back-btn: rgba(0, 0, 0, 0.2);
  margin: 0;
  font-family: "Nunito Sans";
  background-color: var(--background-color);
  color: var(--text-color);
}

body.dark {
  --background-color: hsl(207, 26%, 17%);
  --text-color: hsl(0, 0%, 92%);
  --elements-color: hsl(209, 23%, 22%);
  --shadowColor: #0e0e0e;
  --back-btn: rgba(0, 0, 0, 0.4);
  --bgColor: hsl(209, 23%, 22%);
  transition: 0.2s;
}

.Border-area {
  margin-top: 15px;
  display: flex;
  flex-direction: row;
  align-items: center;
}
.fa-moon {
  margin-right: 4px;
}

.Header {
  box-shadow: 0 2px 4px 0px rgba(0, 0, 0, 0.1);
  padding-inline: 24px;
  background-color: var(--elements-color);
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
}
.container {
  margin-right: 10px;
}
.title {
  font-size: 24px;
  font-weight: 800;
}
.image {
  display: flex;
  margin: 10px;
}
.header-content {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-inline: auto;
  margin-left: 40px;
  margin-right: 40px;
 
}

.theme-changer {
  font-size: 16px;
  cursor: pointer;
  font-weight: 600;
}

.country-details-container {
  margin-inline: auto;
  margin-top: 32px;
  margin-bottom: 30px;
}

.goto-button {
  margin: 140px 0px 0px 70px;
}

.back-button {
  padding: 6px 24px;
  background-color: var(--elements-color);
  border-radius: 4px;
  cursor: pointer;
  box-shadow: 0 2px 4px 0px var(--back-btn);
}

.country-details {
  display: flex;
  align-items: center;
  gap: 100px;
  margin-top: 50px;
  margin-left: 64px;
}

.country-details img {
  width: 550px;
  height: 400px;
  box-shadow: 0 0 8px 0px rgba(0, 0, 0, 0.2);
}

.details-text {
  display: flex;
  flex-direction: column;
  column-gap: 50px;
  max-height: 180px;
  flex-wrap: wrap;
  margin-top: 10px;
  font-weight: 600;
}

.details-text p {
  margin: 0;
}
.details-text span {
  color: var(--text-color);
  font-weight: lighter;
}

.border-countries {
  margin-top: 5px;
  display: flex;
  flex-wrap: wrap;
  gap: 15px;
}

.border {
  display: flex;
  align-items: center;
  flex-direction: row;
  margin-left: 20px;
  height: 50px;
}

.border-countries a {
  padding: 5px 15px;
  display: flex;
  align-items: center;
  background-color: var(--elements-color);
  box-shadow: 0 2px 4px 0px var(--back-btn);
  border-radius: 2px;
  font-size: 14px;
  text-decoration: none;
  color: var(--text-color);
}
.left-side {
  margin-bottom: 80px;
}
.left-side p {
  margin-top: 10px;
}
.right-side p {
  margin-top: 10px;
}


.loader {
  border: 4px solid #f3f3f3; /* Light gray border */
  border-top: 4px solid #3498db; /* Blue border for the loading animation */
  border-radius: 50%; /* Create a circular shape */
  width: 30px; /* Set the width and height of the loader */
  height: 30px;
  animation: spin 1s linear infinite; /* Apply the animation */
  margin: 0 auto; /* Center the loader horizontally */
}

@keyframes spin {
  0% { transform: rotate(0deg); } /* Start the animation at 0 degrees */
  100% { transform: rotate(360deg); } /* End the animation at 360 degrees (a full circle) */
}

@media (max-width: 1200px) {
  .country-details {
    gap: 50px;
    margin-left: 66px;
  }
  .details-text {
    column-gap: 0px;
  }
}

@media (max-width: 1160px) {
  .country-details {
    gap: 50px;
    margin-left: 66px;
  }
  .details-text {
    column-gap: 0px;
  }
    
  .Border-area {
    width: 400px;
  }
}

@media (max-width: 960px) {
  .country-details img {
    width: 430px;
    height: 356px;
  }
  .country-details {
    gap: 40px;
  }
  .details-text {
    column-gap: 0px;
  }
}

@media (max-width: 950px) {

  .country-details {
    flex-direction: column;
    align-items: flex-start;
    margin-top: 50px;
    margin-left: 50px;
    gap: 16px;
   }
   .Border-area{
    width: 500px;
   }
  .country-details img {
    width: 550px;
    height: 400px;
}
  .h1 {
    font-size: 1.5rem;
    margin-top: 50px;
  }
  .border-countries {
    gap: 5px;
  }
  .border {
    margin-left: 0px;
  }
}
@media (max-width: 900px) {
  .country-details {
    flex-direction: column;
    align-items: flex-start;
    margin-top: 50px;
    margin-left: 50px;
    gap: 16px;
   }
   .Border-area{
    width: 500px;
   }
}

@media (max-width: 890px) {
  .country-details img {
    width: 430px;
    height: 280px;
  }
  .country-details {
    gap: 20px;
  }
  .details-text {
    column-gap: 0px;
    font-size: 14px;
  }
  .border-header {
    font-size: 14px;
    margin-bottom: 15px
  }
}

@media (max-width: 746px) {
  .title {
    font-size: 12px;
  }
  .goto-button {
    margin: 100px 0px 0px 35px !important;
  }
  .header-content {
    margin-left: 20px;
    margin-right: 30px;
  }
  .Border-area {
    display: flex;
    flex-direction: column;
    align-items: baseline;
  }

  .header-content p {
    font-size: 12px;
  }

  .header-content h2 {
    font-size: 16px;
  }

  .country-details {
    flex-direction: column;
    align-items: flex-start;
    margin-top: 50px;
    margin-left: 25px;
    gap: 16px;
  }
  .goto-button {
    margin: 130px 0px 0px 75px;
  }

  .details-text {
    max-height: unset;
  }

  .country-details img {
    width: 450px;
    height: 300px;
  }
  .left-side {
    margin-bottom: 2rem;
  }
  .right-side {
    margin-bottom: 1rem;
  }
  .left-side > p {
    margin-bottom: 2px;
  }
  .country-details-container {
    margin-left: 0px !important;
    margin-right: 0px !important;
  }
}

@media (max-width: 580px) {
  .country-details img {
    width: 400px;
    height: 250px;
  }
  .country-details-container {
    margin-left: 30px;
    margin-right: 15px;
  }
}
@media (max-width: 440px) {
  .country-details img {
    width: 350px;
    height: 250px;
  }
  .country-details-container {
    margin-left: 30px;
    margin-right: 15px;
  }
}
@media (max-width: 375px) {
  .Header {
    padding-inline: 0px;
  }
  .country-details img {
    width: 300px;
    height: 240px;
  }
  .Border-area {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin-bottom: 20px;
  }
}

@media (max-width: 335px) {
  .Header {
    padding-inline: 0px;
  }
  .country-details img {
    width: 270px;
    height: 230px;
  }
  .Border-area {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin-bottom: 20px;
  }
}

